<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="login_register">Login / Register</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="current_location">Current Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="open_nav">OPEN</string>
    <string name="close_nav">ClOSE</string>
    <string name="gps_dialog_explain">To get weather data you need to provide gps services to update your location</string>
    <string name="enable_location">Enable Location</string>
    <string name="later">Later</string>
    <string name="turn_on_location_service">Turn on Location Service</string>
    <string name="location_disabled">Location servers are disabled</string>
    <string name="enabled_location">Enabled location</string>
    <string name="no_network">Network is not available</string>
    <string name="please_enter_city_name">Please enter city name</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>

</resources>