<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group
        android:id="@+id/cities"
        android:menuCategory="alternative"
       >

        <item
            android:id="@+id/edit_location"
            android:icon="@drawable/ic_current_location"
            android:title="@string/edit_location" />

        <item
            android:id="@+id/current_location"
            android:icon="@drawable/ic_current_location"
            android:title="@string/current_location" />

    </group>


    <group
        android:id="@+id/secondary"
        android:menuCategory="system">


        <item android:title="@string/tools">
            <menu>
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />

            </menu>

        </item>

    </group>


</menu>