<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="12dp"
            android:src="@drawable/ic_profile" />


        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/login_register"
            android:textColor="?attr/colorSecondary" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="?attr/colorSecondaryVariant" />

    <include
        android:id="@+id/current_location"
        layout="@layout/item_cities" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_cities">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/btt_show_more"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginStandart"
            android:src="@drawable/ic_more_horiz" />

        <TextView
            android:id="@+id/tv_show_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginSmall"
            android:text="@string/show_more"
            android:textAppearance="@style/TextAppearance.WeatherForecast.MenuItem"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="38dp"
            android:src="@drawable/ic_expand_more" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btt_show_less"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginStandart"
            android:src="@drawable/ic_more_horiz" />

        <TextView
            android:id="@+id/tv_show_more_or_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginSmall"
            android:text="@string/show_less"
            android:textAppearance="@style/TextAppearance.WeatherForecast.MenuItem"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="38dp"
            android:src="@drawable/ic_expand_less" />

    </LinearLayout>


</LinearLayout>